# web-crawler

./: Cargo.toml  README.md
src/: crawler.rs  links_and_files.rs  main.rs
urls/1697837270/raw/: raw_links.csv
urls/1697837313/depth/: filtered_links_14.csv  filtered_links_4.csv  filtered_links_6.csv
urls/1697837684/depth_2/: filtered_links_10.csv  filtered_links_21.csv
urls/1697839389/raw/: raw_links.csv
urls/1697839418/depth_2/: filtered_links_3.csv  filtered_links_8.csv
urls/1697839418/raw/: raw_links.csv
urls/1697839512/depth_2/: filtered_links_16.csv
urls/1697839663/depth_1/: filtered_links.csv
urls/1697839663/depth_2/: filtered_links_1.csv  filtered_links_18.csv  filtered_links_2.csv  filtered_links_20.csv
urls/1697839663/raw/: raw_links.csv
urls/1697839830/depth_3/: filtered_links_1.csv
urls/1697839830/raw/: raw_links.csv
urls/1697839910/depth_1/: filtered_links.csv
urls/1697839910/depth_2/: filtered_links_102.csv  filtered_links_113.csv  filtered_links_133.csv  filtered_links_141.csv  filtered_links_19.csv  filtered_links_21.csv  filtered_links_30.csv  filtered_links_4.csv  filtered_links_41.csv  filtered_links_43.csv  filtered_links_55.csv  filtered_links_67.csv  filtered_links_81.csv  filtered_links_85.csv
urls/1697839910/depth_3/: filtered_links_17.csv  filtered_links_2.csv  filtered_links_3.csv  filtered_links_32.csv  filtered_links_39.csv  filtered_links_50.csv  filtered_links_6.csv  filtered_links_62.csv  filtered_links_72.csv  filtered_links_80.csv
urls/1697839910/raw/: raw_links.csv
urls/1697858414/raw/: raw_links.csv
(+85 files in other folders)
