[package]
name = "web-crawler"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11", features = ["blocking"] }
url = "2.2"
robots_txt = "0.7.0"
tokio = { version = "1.14.0", features = ["full"] }
select = "0.6.0"
scraper = "0.17.1"

#html5ever = "0.26.0"
#reqwest = "0.11.22"
#robotparser = "0.11.0"
#robots_txt = "0.7.0"
#tokio = "1.33.0"
#url = "2.4.1"
